--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <!-- Bootstrap Css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- Fontawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -95,17 +99,75 @@
             velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
           <button class="btn btn-primary">Explore our album</button>
 
-          <div class="d-flex  w-50 position-absolute  bottom-0 end-0 shadow p-2 rounded">
+          <div class="d-flex  w-50 position-absolute  bottom-0 end-0 shadow p-2 rounded col">
             <div class="toast-body">
               20% off on next booking
             </div>
             <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
         </div>
-
-
       </div>
     </section>
+
+    <!-- Our Package  -->
+    <section class="container py-5">
+      <h2 class="text-center pb-5">Our package</h2>
+      <div class="our__packages row gap-5">
+        <div class="package shadow p-3 rounded col">
+          <h2>$300</h2>
+          <h4>Business fair</h4>
+          <p>For most businesses event
+            like book fair, craft fair.</p>
+          <p>limited space access</p>
+          <p>Secuirty facility</p>
+          <p>event support</p>
+          <p>Decoration design</p>
+          <p>Per day bill</p>
+          <button class="btn btn-secondary">Choose plan</button>
+        </div>
+        <div class="package shadow p-3 rounded col">
+          <h2>$300</h2>
+          <h4>Business fair</h4>
+          <p>For most businesses event
+            like book fair, craft fair.</p>
+          <p>limited space access</p>
+          <p>Secuirty facility</p>
+          <p>event support</p>
+          <p>Decoration design</p>
+          <p>Per day bill</p>
+          <button class="btn btn-secondary">Choose plan</button>
+        </div>
+        <div class="package shadow p-3 rounded col bg-primary text-white">
+          <h2>$300</h2>
+          <h4>Business fair</h4>
+          <p>For most businesses event
+            like book fair, craft fair.</p>
+          <p>limited space access</p>
+          <p>Secuirty facility</p>
+          <p>event support</p>
+          <p>Decoration design</p>
+          <p>Per day bill</p>
+          <button class="btn btn-secondary">Choose plan</button>
+        </div>
+
+        <div class="package shadow p-3 rounded col">
+          <h2>$300</h2>
+          <h4>Business fair</h4>
+          <p>For most businesses event
+            like book fair, craft fair.</p>
+          <p>limited space access</p>
+          <p>Secuirty facility</p>
+          <p>event support</p>
+          <p>Decoration design</p>
+          <p>Per day bill</p>
+          <button class="btn btn-secondary">Choose plan</button>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- Happy Clints -->
   </main>
 
 
