--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <p>event support</p>
           <p>Decoration design</p>
           <p>Per day bill</p>
-          <button class="btn btn-secondary">Choose plan</button>
+          <button class="btn btn-primary">Choose plan</button>
         </div>
         <div class="package shadow p-3 rounded col">
           <h2>$300</h2>
@@ -135,9 +135,10 @@
           <p>event support</p>
           <p>Decoration design</p>
           <p>Per day bill</p>
-          <button class="btn btn-secondary">Choose plan</button>
+          <button class="btn btn-primary">Choose plan</button>
         </div>
-        <div class="package shadow p-3 rounded col bg-primary text-white">
+        <div class="package  shadow p-3 rounded col bg-primary position-relative hot-badge-div text-white ">
+          <span class="badge  position-absolute  hot-badge">Hot</span>
           <h2>$300</h2>
           <h4>Business fair</h4>
           <p>For most businesses event
@@ -147,7 +148,7 @@
           <p>event support</p>
           <p>Decoration design</p>
           <p>Per day bill</p>
-          <button class="btn btn-secondary">Choose plan</button>
+          <button class="btn btn-light">Choose plan</button>
         </div>
 
         <div class="package shadow p-3 rounded col">
@@ -160,7 +161,7 @@
           <p>event support</p>
           <p>Decoration design</p>
           <p>Per day bill</p>
-          <button class="btn btn-secondary">Choose plan</button>
+          <button class="btn btn-primary">Choose plan</button>
         </div>
 
       </div>
