Happy Clints section Added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <main>
     <!-- Explore Album  -->
     <section class="py-5">
-      <div class="explore__album d-flex  container align-items-center gap-5">
+      <div class="explore__album d-lg-flex  container align-items-center gap-5">
 
         <img class="img-fluid mb-3" src="./images/wedding.png" alt="">
 
@@ -112,8 +112,8 @@
     <!-- Our Package  -->
     <section class="container py-5">
       <h2 class="text-center pb-5">Our package</h2>
-      <div class="our__packages row gap-5">
-        <div class="package shadow p-3 rounded col">
+      <div class="row gap-1 ">
+        <div class="package  p-3 rounded col-12 col-md-4 col-lg-3 ">
           <h2>$300</h2>
           <h4>Business fair</h4>
           <p>For most businesses event
@@ -125,41 +125,40 @@
           <p>Per day bill</p>
           <button class="btn btn-primary">Choose plan</button>
         </div>
-        <div class="package shadow p-3 rounded col">
-          <h2>$300</h2>
-          <h4>Business fair</h4>
-          <p>For most businesses event
-            like book fair, craft fair.</p>
-          <p>limited space access</p>
-          <p>Secuirty facility</p>
-          <p>event support</p>
+        <div class="package  p-3 rounded col-12 col-md-4 col-lg-3">
+          <h2>$500</h2>
+          <h4>wedding basic</h4>
+          <p>For weddings with basic plan
+            and limited item</p>
+          <p>Full space access</p>
+          <p>Food arrangement</p>
+          <p>mangement support</p>
           <p>Decoration design</p>
-          <p>Per day bill</p>
+          <p>Billed as shift</p>
           <button class="btn btn-primary">Choose plan</button>
         </div>
-        <div class="package  shadow p-3 rounded col bg-primary position-relative hot-badge-div text-white ">
+        <div class="package col-12 col-md-4 col-lg-3  p-3 rounded col bg-primary position-relative hot-badge-div text-white ">
           <span class="badge  position-absolute  hot-badge">Hot</span>
-          <h2>$300</h2>
-          <h4>Business fair</h4>
-          <p>For most businesses event
-            like book fair, craft fair.</p>
-          <p>limited space access</p>
-          <p>Secuirty facility</p>
-          <p>event support</p>
-          <p>Decoration design</p>
-          <p>Per day bill</p>
+          <h2>$800</h2>
+          <h4>Wedding plus</h4>
+          <p>For most weddings with premium plans</p>
+          <p>Full space access</p>
+          <p>Dedicated team</p>
+          <p>Buffet food</p>
+          <p>premium Decoration</p>
+          <p>pay as plan</p>
           <button class="btn btn-light">Choose plan</button>
         </div>
 
-        <div class="package shadow p-3 rounded col">
-          <h2>$300</h2>
-          <h4>Business fair</h4>
-          <p>For most businesses event
-            like book fair, craft fair.</p>
-          <p>limited space access</p>
-          <p>Secuirty facility</p>
-          <p>event support</p>
-          <p>Decoration design</p>
+        <div class="package col-12 col-md-4 col-lg-3 p-3 rounded col">
+          <h2>$1200</h2>
+          <h4>Corporate event</h4>
+          <p>For most corporate business 
+            events</p>
+          <p>Full space access</p>
+          <p>Dedicated team</p>
+          <p>Buffet food</p>
+          <p>premium Decoration</p>
           <p>Per day bill</p>
           <button class="btn btn-primary">Choose plan</button>
         </div>
@@ -169,6 +168,55 @@
     </section>
 
     <!-- Happy Clints -->
+
+    <section class="container py-5 ">
+        <h2 class="text-center">Happy Clients says</h2>
+        <div class="row gap-5 py-5 text-center">
+          <div class="col shadow p-4  rounded-3">
+            <p>Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+              <img class="" src="./images/person 1.png" alt="" srcset="">
+              <h5 class="pt-3">Regina Miles</h5>
+              <h6>Banker</h6>
+          </div>
+          <div class="col shadow p-4 rounded-3  ">
+            <p>Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+              <img src="./images/person 1.png" alt="" srcset="">
+              <h5 class="pt-3">Regina Miles</h5>
+              <h6>Banker</h6>
+          </div>
+          <div class="col shadow p-4 rounded-3">
+            <p>Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+              <img src="./images/person 1.png" alt="" srcset="">
+              <h5 class="pt-3">Regina Miles</h5>
+              <h6>Banker</h6>
+          </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </main>
 
 
